[package]
name = "jdb"
version = "0.1.0"
authors = ["John Erickson <john.t.erickson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "*"
tempfile = "3"
rand = "0.7"
owning_ref = "*"

[dependencies.parking_lot]
version ="*"
features = ["owning_ref"]